<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreditsActivity"
    android:background="@drawable/board_texture">

    <TextView
        android:id="@+id/CreditsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="75dp"
        android:text="@string/creditstitle"
        android:textColor='@color/cardFront'
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/GameTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.507" />

    <TextView
        android:id="@+id/GameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="700dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="75dp"
        android:text="@string/GameTitle"
        android:textColor='@color/cardFront'
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.507" />

    <TextView
        android:id="@+id/Creator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="75dp"
        android:text="@string/Creator"
        android:textColor='@color/cardFront'
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.507" />

    <TextView
        android:id="@+id/Name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="400dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="300dp"
        android:text="@string/Name1"
        android:textColor='@color/cardFront'
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.507" />

    <TextView
        android:id="@+id/Name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginTop="215dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="75dp"
        android:text="@string/Name2"
        android:textColor='@color/cardFront'
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.507" />

    <TextView
        android:id="@+id/Name3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="400dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="75dp"
        android:text="@string/Name3"
        android:textColor='@color/cardFront'
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.507" />

    <TextView
        android:id="@+id/Name4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="600dp"
        android:layout_marginTop="285dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="75dp"
        android:text="@string/Name4"
        android:textColor='@color/cardFront'
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.507" />

</android.support.constraint.ConstraintLayout>